feat: implement intelligent AI briefing logic based on server status changes